--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,6 @@
 [user]
 	name = Xxxxxxx Xxxxxxxx
 	email = xxxxxx@xxxxx.com
-	password = xxxxxxxx
-	pass = xxxxxxx
 [alias]
 	## Basic Shortcut ##
 	cp = cherry-pick
@@ -37,21 +35,17 @@
 	lg = log --graph --decorate --oneline --all 
 	# Affiche un log rapide avec les graphiques de branches
 	
+    
+    # Only works under Macos based system
 	lg1 = log --date-order --all --graph --name-status --format="%C(green)%H%Creset %C(yellow)%an%Creset %C(blue bold)%ar%Creset %C(red bold)%d%Creset%s" 
 	# Affiche un rapport plus détaillé sur les commits passés
 	
 	lc = log -n5 --pretty=format:"%C(green)%h%Creset %C(yellow)%an%Creset %C(green bold)(%ar)%Creset %C(red bold)%d%Creset%s" 
 	# Affiche les 5 derniers commits, sans entrer trop dans les détails
 	
+    # Only works under Macos based system
 	lc1 = log -n10 --pretty=format:"%C(green)%H%Creset %C(yellow)%an%Creset %C(green bold)(%ar)%Creset %C(red bold)%d%Creset%s" 
 	# Affiche les 10 derniers commits avec toutes les informations que détiens GIT
-	
-	## What the fuck ?!? ##
-	poule = pull
-	oeuf = push
-	moustache = stash
-[push]
-	default = simple
 [color]
 	ui = true
 [help]
