--- a/.gitconfig
+++ b/.gitconfig
@@ -49,8 +49,8 @@
 	# Search keywords through whole commits
 	search = "!f() { git log --grep \"$1\" $(git rev-list --all); }; f"
 	
+	# List tags and their related details
 	tags="for-each-ref --sort=taggerdate --format='%(color:green)%(subject)%(color:reset), tagged: %(refname:short)\n%(taggerdate)\n%(taggername) %(taggeremail)\n\n%(contents:body)\n' refs/tags"
-	search = "!f() { git log --grep \"$1\" $(git rev-list --all); }; f"
 [color]
 	ui = true
 [help]
